--- a/src/component/container/component/topbar.css
+++ b/src/component/container/component/topbar.css
@@ -3,41 +3,59 @@
     border-radius: 0;
     margin-bottom: 0;
 }
+
 .navbar.navbar-default .navbar-toggle {
     margin-top: 32px;
 }
+
 .navbar.navbar-default .navbar-brand {
     height: auto;
     padding: 22px 15px 21px;
 }
 
-.imgrec{
-    border-radius: 50%;position: relative;float: left;
+.imgrec {
+    width:220px;
+    height:220px;
+    border-radius: 50%;
+    position: relative;
+    float: left;
 }
 
-.textrec{
-    text-align: center;align-content: right;align-self: right;align-items: right;
+.textrec {
+    text-align: center;
+    align-content: right;
+    align-self: right;
+    align-items: right;
 }
 
-.pararec{
-    position:relative;float:right;text-align:right;color: #333;
+.pararec {
+    position: relative;
+    float: right;
+    text-align: right;
+    color: #333;
 }
 
-.spanrec{
-    text-align: justify;position: relative;float: right;
+.spanrec {
+    text-align: justify;
+    position: relative;
+    float: right;
 }
 
-.para2rec{
-    position:relative;float:right;text-align:right;color: #333;
+.para2rec {
+    position: relative;
+    float: right;
+    text-align: right;
+    color: #333;
 }
 
-.span2rec{
-    position:relative;float:right;text-align: justify;
+.span2rec {
+    position: relative;
+    float: right;
+    text-align: justify;
 }
 
-
-.overallpadding{
-    padding:20px 90px;
+.overallpadding {
+    padding: 20px 90px;
 }
 
 header .intro-text .name {
@@ -48,16 +66,39 @@ header .intro-text .name {
     font-size: 2em;
 }
 
-.backgroundblack{
+.backgroundblack {
     background-color: #222;
-    color:White;
+    color: White;
 }
 
-.paddingTop{
-    padding:20px 0px;
+.paddingTop {
+    padding: 20px 0px;
 }
 
-.backgroundwhite{
+.backgroundwhite {
     background-color: #FFFFFF;
-    color:#333;
+    color: #333;
+}
+
+.mediaplay {
+    width :420px;
+    height : 440px;
+}
+
+@media only screen and (max-width: 500px) {
+    .overallpadding {
+        padding: 15px 10px;
+    }
+    .mediaplay {
+        width :200px;
+        height : 267px;
+    }
+
+    .imgrec {
+        width:77px;
+        height:82px;
+        border-radius: 50%;
+        position: relative;
+        float: left;
+    }
 }
